proxima-macros/tests/ui/pipe_mount_non_handler_shaped.stderr
error[E0277]: `increment` can't be mounted: expected a request handler — an `async fn(Request<Bytes>) -> Result<Response<Bytes>, ProximaError>`, a handler-shaped pipe, or a registered pipe name
  --> tests/ui/pipe_mount_non_handler_shaped.rs:18:20
   |
18 |     app.mount("/", increment).expect("mount");
   |         -----      ^^^^^^^^^ not something `App::mount` can dispatch to
   |         |
   |         required by a bound introduced by this call
   |
help: the trait `IntoMountTarget<_>` is not implemented for `increment`
  --> tests/ui/pipe_mount_non_handler_shaped.rs:11:1
   |
11 | #[piped(send)]
   | ^^^^^^^^^^^^^^
help: the following other types implement trait `IntoMountTarget<Via>`
  --> $WORKSPACE/src/app.rs
   |
   | impl IntoMountTarget<ViaName> for &str {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&str` implements `IntoMountTarget<ViaName>`
...
   | impl IntoMountTarget<ViaName> for String {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::string::String` implements `IntoMountTarget<ViaName>`
...
   | impl IntoMountTarget<ViaTarget> for MountTarget {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MountTarget` implements `IntoMountTarget<ViaTarget>`
note: required by a bound in `App::mount`
  --> $WORKSPACE/src/app.rs
   |
   |     pub fn mount<Target, Via>(&self, path: &str, target: Target) -> Result<(), ProximaError>
   |            ----- required by a bound in this associated function
   |     where
   |         Target: IntoMountTarget<Via>,
   |                 ^^^^^^^^^^^^^^^^^^^^ required by this bound in `App::mount`
   = note: this error originates in the attribute macro `piped` (in Nightly builds, run with -Z macro-backtrace for more info)
